--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,9 @@
-body{
+body {
     margin: 0;
-    background-color: green;
-    color:white;
-}
+    font-family: 'Muli', sans-serif;
+    background: #8f57fd;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
